# cpp-sdk

./: CMakeLists.txt  README.md
example/: main.cpp
src/: api_response.cpp  api_response.h  client.cpp  client.h  test_client.cpp
